--- a/css/sports.css
+++ b/css/sports.css
@@ -320,17 +320,6 @@ background: whitesmoke;
   opacity: 0.3;
 }
 
-/* .section-news-content-container {
-  display: flex;
-  margin-top: 50px;
-  gap: 20px;
-} */
-
-/* .news-content-container {
-  display: flex;
-  margin-top: 50px;
-  gap: 20px;
-} */
 .section-second-news-container {
   display: flex;
   margin-top: 30px;
@@ -557,6 +546,182 @@ footer hr {
   font-weight: 600;
 }
 /* //RESPONSIVE DESIGN// */
+
+/* FOR ALL SCREEN SIZES  */
+
+@media screen and (min-width: 1024px) and (max-width: 1353px) {
+  main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+  }
+  .body-advert-image{
+    width: 600px;
+  } 
+  .main-news{
+    display: flex;
+    justify-content: space-around;
+    gap: 10px;
+    border-bottom: 1px solid rgb(226, 217, 217);
+  }
+  .left-section {
+    width: 30%;
+    padding-left: 10px;
+  }
+  .news-wrapper {
+    display: flex;
+    /* justify-content: space-evenly; */
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-top: 20px;
+  }
+  .news-image {
+    width: 150px;
+    height: 140px;
+  }
+  .modified-img{
+    width: 150px;
+    height: 140px;
+  }
+  
+  .right-section, .left-section, .middle-section{
+    width: 100%;
+    text-align: center;
+  }
+  .section-title, .content-wrapper{
+    border-radius: 5px;
+    width: 150px;
+    font-size: 17px;
+  }
+  .title-news {
+    font-size: 15px;
+    width: 150px;
+  }
+  .section-news-content-container, .news-content-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 50px;
+    margin-top: 20px;
+  }
+  .minor-news-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 50px;
+    margin-top: 20px;
+  }
+  .modified-part {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 50px;
+    margin-top: 50px;
+    padding-left: 10px;
+  }
+  .ad {
+    width: 200px;
+    height: 449px;
+  }
+
+    
+} 
+/* //MEDIUM DEVICES LIKE LANDSCAPE TABLETS */
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+  }
+  .advertisment{
+    display: none;
+  }
+  .body-advert{
+    visibility: visible;
+  }
+  .body-advert{
+    display: contents;
+  }
+  .body-advert-image{
+    width: 200px;
+    height: 50px;
+  }
+  
+  .main-news{
+    display: flex;
+    justify-content: space-around;
+    gap: 10px;
+    border-bottom: 1px solid rgb(226, 217, 217);
+  }
+  .left-section {
+    width: 30%;
+    padding-left: 10px;
+  }
+  .news-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-top: 20px;
+  }
+  .news-image {
+    width: 150px;
+    height: 150px;
+  }
+  .modified-img{
+    width: 150px;
+    height: 150px;
+  }
+  
+  .right-section, .left-section, .middle-section{
+    width: 100%;
+    text-align: center;
+  }
+  .section-news-content-container, .news-content-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 20px;
+  }
+  .minor-news-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+  }
+  .modified-part {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 50px;
+    padding-left: 10px;
+  }
+  .adnammy {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 10px
+  }
+  .section-title, .content-wrapper{
+    border-radius: 5px;
+    width: 150px;
+    font-size: 17px;
+  }
+  .title-news {
+    font-size: 15px;
+    width: 150px;
+  }
+  .section-title h3 a, .content-wrapper h3 a{
+    width: 150px;
+    font-size: 12px;
+    line-height: 1.2;
+  }
+}
+
 @media (max-width: 750px) {
   header {
     position: relative;
@@ -698,116 +863,6 @@ footer hr {
     font-size: 0.8rem;
   }
 }
-/*Responsiveness For very small devices*/
-@media (max-width: 350px) {
-  .footer-middle-section {
-    justify-content: center;
-  }
-  .footer-section {
-    width: 90%;
-    margin: 0 auto;
-  }
-  .footer-bottom-section {
-    flex-direction: column;
-    justify-content: center;
-  }
-  .footer-bottom-link {
-    flex-direction: row;
-    width: 70%;
-  }
-  .footer-social-links {
-    width: 90%;
-    margin-top: 1rem;
-  }
-}
-/* FOR SCREEN SIZES  */
-/* @media only screen and (min-width: 1024px){ */
-/* main{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        margin-top: 20px;
-    }
-    .sports-wrapper{
-        width: 100%;
-    }
-    .main-news{
-        display: flex;
-       
-
-justify-content: center;
-align-items: center;
- }
-    .right-section, .left-section, .middle-section{
-        width: 100%;
-    }
-    .middle-section{
-        border: none;
-    }
-    .middle-title {
-        font-size: 16px;
-        text-align: center;
-    }
-    .news-wrapper{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 10px;
-        margin-top: 10px;
-    }
-    .second-news-container{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin-top: 10px;
-        gap: 10px;
-    }
-    .section-news-content-container{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin-top: 10px;
-        gap: 10px;
-    }
-    .second-news-container{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin-top: 10px;
-        gap: 10px;
-    }
-    .news-content-container {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin-top: 10px;
-        gap: 10px;
-    }
-    .section-second-news-container {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin-top: 10px;
-        gap: 10px;
-    }
-    .section-1{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-    }
-    } */
-/* //MEDIUM DEVICES LIKE LANDSCAPE TABLETS */
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-}
 
 /* //SMALL DEVICES LIKE POTRAIT TABLET,LARGE PHONE */
 @media screen and (min-width: 480px) and (max-width: 767px) {
@@ -817,89 +872,89 @@ align-items: center;
     justify-content: center;
     align-items: center;
     margin-top: 20px;
-}
-.sports-wrapper {
+  }
+  .sports-wrapper {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}
+  }
 
-.main-news{
+  .main-news{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-.right-section, .left-section, .middle-section{
+  }
+  .right-section, .left-section, .middle-section{
     width: 100%;
     text-align: center;
-}
-.left-section{
+  }
+  .left-section{
   padding-left: 10px;
   padding-right: 10px;
-}
-.middle-section{
+  }
+  .middle-section{
     border: none;
     padding-left: 10px;
-}
-.middle-card-image{
+  }
+  .middle-card-image{
   width: 100%;
   height: 300px;
-
-}
-.middle-title {
+  }
+  .middle-title {
     font-size: 16px;
     text-align: center;
-}
-.news-wrapper{
+  }
+  .news-wrapper{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 10px;
     margin-top: 10px;
-}
-.second-news-container{
+  }
+  .second-news-container{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-top: 10px;
     gap: 10px;
-}
-.section-news-content-container{
+  }
+  .section-news-content-container{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     margin-top: 10px;
-    gap: 10px;
-}
-.minor-news-wrapper{
+    gap: 50px;
+  }
+  .minor-news-wrapper{
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    justify-content: space-evenly;
+    gap: 50px;
     margin-top: 20px;
     padding: 10px;
-}
-.second-news-container{
+  }
+  .second-news-container{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     margin-top: 10px;
     gap: 10px;
-}
-.news-content-container {
+  }
+  .news-content-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     margin-top: 10px;
     gap: 10px;
-}
+  }
   .section-second-news-container {
   display: flex;
   flex-wrap: wrap;
@@ -911,26 +966,31 @@ align-items: center;
   .section-1{
   display: flex;
   flex-wrap: wrap;
+  gap: 50px;
   justify-content: center;
   align-items: center;
   width: 100%;
   }
-  
+  .content-container{
+    display: flex;
+    justify-content: space-evenly;
+    gap: 50px;
+  }
   .modified-part{
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-  align-items: center;
-  width: 100%;
-  
+    justify-content: space-evenly;
+    gap: 50px;
+    align-items: center;
+    width: 100%;
   }
   
-.section-news-content-container, .news-content-container {
+  .section-news-content-container, .news-content-container {
     display: flex;
     gap: 40px;
     margin-top: 20px;
     padding: 10px;
-}
+  }
   .modified-img {
   width: 220px;
   height: 170px;
@@ -941,7 +1001,6 @@ align-items: center;
   .advert-inside{
       width: 300px;
       margin-left: 0;
-      
   }
   .advertisment{
       display: none;
@@ -1000,8 +1059,7 @@ align-items: center;
     .middle-card-image{
       width: 100%;
       height: 300px;
-    
-  }
+    }
     .middle-title {
         font-size: 16px;
         text-align: center;
@@ -1094,6 +1152,32 @@ align-items: center;
       height: 50px;
     }
     .adnammy {
-      padding-left: 0px;
+      display: flex;
+      flex-direction: column;
+      padding-left: 0px
+    }
+    
+}
+
+/*Responsiveness For very small devices*/
+@media (max-width: 350px) {
+  .footer-middle-section {
+    justify-content: center;
+  }
+  .footer-section {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .footer-bottom-section {
+    flex-direction: column;
+    justify-content: center;
+  }
+  .footer-bottom-link {
+    flex-direction: row;
+    width: 70%;
+  }
+  .footer-social-links {
+    width: 90%;
+    margin-top: 1rem;
   }
 }
